# skiba

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  TROUBLESHOOTING.md  foliumcode.md  index.html  ipyleafletcode.md  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.claude/: settings.local.json
aggregated_point_extraction/: index.html
area_extraction/: index.html
buffer_and_sample/: index.html
buffer_coordinates/: index.html
buffer_method/: index.html
changelog/: index.html
common/: index.html
contributing/: index.html
coordinate_oriented/: index.html
dashboard-tips/: requirements.txt
data/: 1000.0ft.csv
data_process/: index.html
docs/: aggregated_point_extraction.md  area_extraction.md  buffer_and_sample.md  buffer_coordinates.md  buffer_method.md  common.md  contributing.md  coordinate_oriented.md  data_process.md  faq.md  geojson_buffering.md  index.md  installation.md  interactive.md  map.md  map_detail.md  map_details.md  paper.bib  paper.md  paper2.bib  point_extraction.md  skiba.md  usage.md
examples/: .gitignore  01_basic_point_extraction.py  01_point_extraction_complete.py  02_buffer_and_privacy.py  03_area_extraction.py  04_basic_demo.py  05_interactive_extraction.py  README.md
faq/: index.html
foliumcode/: index.html
geojson_buffering/: index.html
installation/: index.html
interactive/: index.html
ipyleafletcode/: index.html
map/: index.html
map_detail/: index.html
point_extraction/: index.html
search/: search_index.json
skiba/: __init__.py  aggregated_point_extraction.py  area_extraction.py  buffer_and_sample.py  buffer_coordinates.py  buffer_method.py  common.py  coordinate_oriented.py  data_process.py  data_process_og.py  (+9 more)
(+60 files in other folders)
