[project]
name = "skiba"
version = "2.2.2"
dynamic = [
    "dependencies",
]
description = "A python package for foresters to query Google Earth Engine data"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "skiba",
]
license = {text = "MIT License"}
authors = [
  {name = "Tara Skiba", email = "tskiba@vols.utk.edu"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
skiba = "skiba.cli:main"

[project.optional-dependencies]
all = [
    "skiba[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["skiba*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "2.2.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "skiba/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/taraskiba/skiba"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"